<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/maxe_ic_menu_camera"
            android:title="@string/maxe_menu_home" /><!---->
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/maxe_ic_menu_gallery"
            android:title="@string/maxe_home_item_announcement" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/maxe_ic_menu_slideshow"
            android:title="@string/maxe_home_item_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/maxe_ic_menu_manage"
            android:title="@string/maxe_home_item_tools" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/maxe_ic_menu_share"
            android:title="@string/maxe_home_item_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/maxe_ic_menu_send"
            android:title="@string/maxe_home_item_send" />

    </group>

    <item android:title="Version 2-7-29">
        <menu>
            <item
                android:enabled="false"
                android:title="" />
        </menu>
    </item>

</menu>
